--- a/dTVTerminalApp/app/src/main/assets/osslicense.html
+++ b/dTVTerminalApp/app/src/main/assets/osslicense.html
@@ -1,13 +1,13 @@
 <!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<title>osslicense</title>
-<body text="#FFFFFF" style="background-color:transparent">
+    <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+    <meta http-equiv="Content-Style-Type" content="text/css">
+    <title>osslicense</title>
+<body text="#FFFFFF" bgcolor="#000000">
 </head>
 <body><br><br>osslicense<br><br><br><br>説明文が入ります。</body>
 </body>
