DREM-1516 [DREM-61]ワーディング適用
初回表示画面のワーディング適用、クリップ判定でのユーザ情報取得タイミング改善、TODOコメント追加

Change-Id: Iabbf8adc1bd43e368e4f9bcec39a1ebab78842e6

--- a/dTVTerminalApp/app/src/main/assets/first_pairing_help.html
+++ b/dTVTerminalApp/app/src/main/assets/first_pairing_help.html
@@ -14,11 +14,11 @@
 <br>
 <font size="3" color="#ffffff">docomo STB ヘルプ</font>
 <br>
-<font size="4"><b>STBとペアリングするには</b></font>
+<font size="4"><b>ドコモテレビターミナルとペアリングするには</b></font>
 <br><br>
 <Hr Size="1" Color="#333333">
 <br>
-<font size="3" color="#ffffff">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</font>
+<font size="3" color="#ffffff">ドコモテレビターミナルの電源がONになっていることを確認の上、ドコモテレビターミナルとスマートフォン・タブレットを同じWi-Fiに接続してください。</font>
 <br><br>
 <font size="2" color="#cccccc">No：1712 公開日時：2015/12/24（木）16:47</font>
 <br>
