DREM-1920 [実装]([DREM-61]ワーディング適用)(メニュ-/設定/その他関連)
・グローバルメニュー
・設定
・その他関連
　お知らせ
　FAQ
　アプリケーション情報
　ライセンス情報
　プライバシーポリシー
　アプリケーション・プライバシーポリシー
　利用規約
　ペアリング設定

Change-Id: I75faec52d7bcf2323361a2ed0b9aa8355efc912d

--- a/dTVTerminalApp/app/src/main/assets/osslicense.html
+++ b/dTVTerminalApp/app/src/main/assets/osslicense.html
@@ -1,14 +1,22 @@
-<!--
-  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
-  -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!--
+  Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+-->
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
     <meta http-equiv="Content-Style-Type" content="text/css">
-    <title>osslicense</title>
-<body text="#FFFFFF" bgcolor="#000000">
+    <title>ライセンス情報</title>
+    <style type="text/css" media="screen">
+        p.description {
+            margin-top: 0.8em;
+            margin-bottom: 0.8em;
+            margin-left: 0.2em;
+            margin-right: 0.2em;
+        }
+    </style>
 </head>
-<body><br><br>osslicense<br><br><br><br>説明文が入ります。</body>
+<body text="#FFFFFF" bgcolor="#000000">
+<p class="description">本アプリは以下のオープンソースライセンスのライブラリを使用しています</p>
 </body>
 </html>
