--- a/dTVTerminalApp/app/src/main/assets/first_pairing_help.html
+++ b/dTVTerminalApp/app/src/main/assets/first_pairing_help.html
@@ -1,27 +1,21 @@
+<!DOCTYPE html>
+<html lang="ja">
 <!--
-  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
-  -->
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+  Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+-->
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-    <meta http-equiv="Content-Style-Type" content="text/css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>first_pairing_help</title>
-<body bgcolor="#000000" text="#FFFFFF">
+    <link rel="stylesheet" href="https://apl.d.dmkt-sp.jp/dtv2/tvt_sp/support/css/bundle.css?20180619153009">
 </head>
 <body>
-<br>
-<font size="3" color="#ffffff">docomo STB ƒwƒ‹ƒv</font>
-<br>
-<font size="4"><b>ƒhƒRƒ‚ƒeƒŒƒrƒ^[ƒ~ƒiƒ‹‚ÆƒyƒAƒŠƒ“ƒO‚·‚é‚É‚Í</b></font>
-<br><br>
-<Hr Size="1" Color="#333333">
-<br>
-<font size="3" color="#ffffff">ƒhƒRƒ‚ƒeƒŒƒrƒ^[ƒ~ƒiƒ‹‚Ì“dŒ¹‚ªON‚É‚È‚Á‚Ä‚¢‚é‚±‚Æ‚ðŠm”F‚ÌãAƒhƒRƒ‚ƒeƒŒƒrƒ^[ƒ~ƒiƒ‹‚ÆƒXƒ}[ƒgƒtƒHƒ“Eƒ^ƒuƒŒƒbƒg‚ð“¯‚¶Wi-Fi‚ÉÚ‘±‚µ‚Ä‚­‚¾‚³‚¢B</font>
-<br><br>
-<font size="2" color="#cccccc">NoF1712 ŒöŠJ“úŽžF2015/12/24i–Øj16:47</font>
-<br>
-</body>
+    <div class="Header">
+        <div class="ShoulderTitle">docomo STB ãƒ˜ãƒ«ãƒ—</div>
+        ãƒ‰ã‚³ãƒ¢ãƒ†ãƒ¬ãƒ“ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ã¨ãƒšã‚¢ãƒªãƒ³ã‚°ã™ã‚‹ã«ã¯
+    </div>
+    <div class="Text">ãƒ‰ã‚³ãƒ¢ãƒ†ãƒ¬ãƒ“ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ã®é›»æºãŒONã«ãªã£ã¦ã„ã‚‹ã“ã¨ã‚’ç¢ºèªã®ä¸Šã€ãƒ‰ã‚³ãƒ¢ãƒ†ãƒ¬ãƒ“ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ã¨ã‚¹ãƒžãƒ¼ãƒˆãƒ•ã‚©ãƒ³ãƒ»ã‚¿ãƒ–ãƒ¬ãƒƒãƒˆã‚’åŒã˜Wi-Fiã«æŽ¥ç¶šã—ã¦ãã ã•ã„ã€‚<br>
+        <div class="SmallText">Noï¼š1712 å…¬é–‹æ—¥æ™‚ï¼š2015/12/24ï¼ˆæœ¨ï¼‰16:47</div>
+    </div>
 </body>
 </html>
