--- a/dTVTerminalApp/app/src/main/assets/licenses/oss_licenses.html
+++ b/dTVTerminalApp/app/src/main/assets/licenses/oss_licenses.html
@@ -1076,7 +1076,7 @@ How to Apply These Terms to Your New Libraries
 If you develop a new library, and you want it to be of the greatest possible use to the public, we recommend making it free software that everyone can redistribute and change. You can do so by permitting redistribution under these terms (or, alternatively, under the terms of the ordinary General Public License).
 To apply these terms, attach the following notices to the library. It is safest to attach them to the start of each source file to most effectively convey the exclusion of warranty; and each file should have at least the "copyright" line and a pointer to where the full notice is found.
 &lt;one line to give the library's name and a brief idea of what it does.&gt;
-Copyright (C) &lt;year&gt; <name of author&gt;
+Copyright (C) &lt;year&gt; &lt;name of author&gt;
 This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2.1 of the License, or (at your option) any later version.
 This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
 You should have received a copy of the GNU Lesser General Public License along with this library; if not, write to the Free
