DREM-5010 <AOS> ペアリング導線の改善(既存画面変更)★
Change-Id: I745e1dad101f8e28a36df2d00e924c3dbcbefb31

--- a/dTVTerminalApp/app/src/main/assets/pairing_help/dRM-18-008.html
+++ b/dTVTerminalApp/app/src/main/assets/pairing_help/dRM-18-008.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>ドコモテレビターミナル</title>
-    <link rel="stylesheet" href="css/bundle.css">
-  </head>
-  <body>
-    <div class="Header">
-      <div class="ShoulderTitle">ドコモテレビターミナルアプリ ヘルプ</div>
-      ドコモテレビターミナルアプリとペアリングするには
-    </div>
-    <div class="Text">ドコモテレビターミナルの電源がONになっていることを確認の上、ドコモテレビターミナルとスマートフォン・タブレットを同じネットワークに接続してください。</div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>ドコモテレビターミナル</title>
+  <link rel="stylesheet" href="css/bundle.css">
+</head>
+<body>
+<div class="Header">
+  <div class="ShoulderTitle">ドコモテレビターミナルアプリ ヘルプ</div>
+  ネットワーク設定の確認について</div>
+<div class="Text">ドコモテレビターミナル（TT01）が見つからない場合は、ドコモテレビターミナル（TT01）の電源がONまたは、待機状態になっていることを確認の上、スマートフォン・タブレットがドコモテレビターミナル（TT01）と同一のネットワークにWi-Fi接続されているか確認してください。<br><br></div>
+<div class="Text">■Wi-Fiルーターとドコモテレビターミナル（TT01）の接続を確認する<br>
+  （有線での接続を強く推奨しております）</div>
+<div class="Text">◎Wi-Fiルーターをご利用の場合<br>
+  Wi-Fiルーターとドコモテレビターミナル（TT01）本体のLAN端子がLANケーブルで接続されているかご確認ください。</div>
+<div class="Text">◎ルーター機能一体型の回線終端装置（ONU）をご利用の場合<br>
+  ルーター機能一体型の回線終端装置（ONU）とドコモテレビターミナル（TT01）本体のLAN端子がLANケーブルで接続されているかご確認ください。</div>
+<div class="Text">＜詳しくは、ブラウザから以下のURLにアクセスして、「ひかりＴＶ for docomo 接続・操作ガイド(P3、P18)」をご参照ください＞<br>
+  https://www.hikaritv-docomo.jp/user/howto/connect<br><br></div>
+<div class="Text">■スマートフォン・タブレットのWi-Fi接続先を確認する</div>
+<div class="Text">◎Androidスマートフォン/タブレットをご利用の方<br>
+  ホームから「設定＞Wi-Fi」でWi-FiがON、ネットワーク名がドコモテレビターミナル（TT01）と接続したルーターのネットワーク（SSIDまたはネットワーク名）になっているかご確認ください。</div>
+<div class="Text">◎iPhone、iPadをご利用の方<br>
+  ホームから「設定＞Wi-Fi」でWi-Fiがオン、ネットワーク名がドコモテレビターミナル（TT01）と接続したルーターのネットワーク（SSIDまたはネットワーク名）になっているかご確認ください。<br>
+  <div class="imageArea">
+    <div align="left"><img src="paring_image/pairing_ios02.png" width="300" alt="" /><br><br></div>
+    Wi-Fiがオフになっている場合、「オフ」をタップし、<br>
+    ①「ネットワークを選択」に表示されるドコモテレビターミナル（TT01）と接続したルーターのネットワーク（SSIDまたはネットワーク名）を選択し、パスワードを入力して接続<br>
+    ②選択したネットワークが表示され、チェックマークがついていることを確認<br>
+    ③画面上部が無線マークになっていることを確認</div>
+  <div class="imageArea">
+    <div align="left"><img src="paring_image/pairing_ios03.png" width="300" alt="" /></div>
+  </div>
+</div>
+</body>
 </html>
